--- a/index.html
+++ b/index.html
@@ -3,4 +3,14 @@ layout: default
 title: Denis Jacquemin's Blog
 ---
 
-Welcome to my site!
+<div class="content">
+    <div class="related">
+        <ul>
+            {% for post in site.posts %}
+                <li>
+                    <span>{{ post.date | date: "%B %e, %Y"}}</span><a href="{{ post.url }}">{{ post.title }}</a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
