--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@ title: Denis Jacquemin's Blog
 ---
 
 <div class="content">
-    <div class="related">
-        <ul>
-            {% for post in site.posts %}
-                <li>
-                    <span>{{ post.date | date: "%B %e, %Y"}}</span><a href="{{ post.url }}">{{ post.title }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
+    <h1>Blog Posts</h1>
+    <ul>
+        {% for post in site.posts %}
+            <li>
+                <span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a>
+            </li>
+        {% endfor %}
+    </ul>
 </div>
-
